--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "event-stream": "^4.0.1",
     "express": "^4.17.1",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
